--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "test:nowatch": "CI=true react-scripts test --env=jsdom",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
